Add alert dialog component and integrate image dialog functionality; update styles and dependencies

--- a/app/app.css
+++ b/app/app.css
@@ -140,11 +140,9 @@
   
   .message img {
     display: block;
-  }
-  
-  .message img {
     max-width: 100%;
     margin: .5rem 0;
+    cursor: pointer;
   }
   
   code {
